# c-unit-test-workflow

./: .gitignore  ANALYZE_COMPILE_COMMANDS_USAGE.md  ARCHITECTURE.md  CMakeLists.txt  CONFIG_FILE_USAGE.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_QUICK_START.md  DELIVERY_SUMMARY.md  FILES_CHECKLIST.md  FILE_MANIFEST.md  GETTING_STARTED.md  HOW_TO_GENERATE_UT_FOR_REAL_REPO.md  INDEX.md  LIBCLANG_IMPLEMENTATION_VERIFIED.md  LIBCLANG_INSTALL_GUIDE.md  LIBCLANG_INTEGRATION_SUMMARY.md  LIBCLANG_READY_TO_USE.md  LLM_WORKFLOW_GUIDE.md  LLM_WORKFLOW_INDEX.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  PROMPT_IMPROVEMENT.md  QUICKREF_LLM.md  QUICK_REFERENCE.txt  QUICK_START_FOR_REAL_REPO.md  README.md  REMOTE_VLLM_SETUP.md  START_HERE.md  START_HERE_LLM.md  SYSTEM_SUMMARY_LLM.md  VLLM_CONFIG_OPTIMIZATION.md  WORKFLOW_FIX_SUMMARY_20260302.md  WORKFLOW_TEST_EXECUTION.md  check_vllm_config.py  generate_ut_for_repo.py  llm_workflow_config.example.json  llm_workflow_config.json  main.py  pyproject.toml  quickstart.bat  (+13 more)
include/: database.h  student_manager.h  validator.h
src/: database.c  student_manager.c  validator.c
test/: database_test.cpp  student_manager_test.cpp  validator_test.cpp
tools/: c_code_analyzer.py  compile_commands_analyzer.py  experience_store.py  gtest_generator.py  llm_client.py  llm_test_generator.py  test_executor.py  ut_workflow.py  ut_workflow_llm.py
tools/log/: experience_store.jsonl
